manifests/webhooks.yml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cloudzero-insights-deployment-validation
webhooks:
  - name: "deployment-validation.default.svc"
    # Remove or modify namespaceSelector
    namespaceSelector: {} # This denotes no specific selection, applies to all namespaces
    rules:
      # https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#webhook-request-and-response
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
        scope: "*" # Use "*" to ensure we don't miss anything
    clientConfig:
      service:
        namespace: cloudzero-insights
        name: cloudzero-insights-server
        path: "/validate/deployments"
      caBundle: ${ENCODED_CA}
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cloudzero-insights-pod-validation
webhooks:
  - name: "pod-validation.default.svc"
    namespaceSelector: {}
    rules:
      - operations: ["CREATE", "UPDATE", "DELETE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "*"
    clientConfig:
      service:
        namespace: cloudzero-insights
        name: cloudzero-insights-server
        path: "/validate/deployments"
      caBundle: ${ENCODED_CA}
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
